feat: add responsiveness to app

--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -63,6 +63,7 @@
     border: 0;
     color: var(--gray-400);
     cursor: pointer;
+    margin-top: 1rem;
 
     display: flex;
     align-items: center;
