--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -108,7 +108,12 @@
     transition: color 0.2s, backgroud-color 0.2s;
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
+
+.commentForm button[type=submit]:not(:disabled):hover {
     background: var(--green-300);
 }
 
